# AnyStore

./: .gitignore  ANYSTORE_VISION.md  README.md  package-lock.json  package.json  resources.md  tailwind.config.ts  tsconfig.json
backend/: README.md
backend/agentic/: README.md  pyproject.toml
backend/agentic/src/anystore_agent/: __init__.py  __main__.py  agent.py  app.py  settings.py
backend/functions/: README.md  local.settings.example.json  package.json  tsconfig.json
backend/functions/src/functions/: health.ts  ingestDocument.ts  query.ts
backend/functions/src/lib/: agentClient.ts  http.ts
backend/shared/: README.md  contracts.ts  env.example
src/app/: clientLayout.tsx  globals.css  layout.tsx
src/app/api/datarooms/: route.ts
src/app/dashboard/: page.tsx
src/app/dataroom/[id]/: layout.tsx
src/app/dataroom/[id]/[subId]/: page.tsx
src/app/pages/: Dashboard.tsx  DataroomPage.tsx  newFrontPage.tsx
src/app/signin/: SignInDetails.tsx
src/components/services/: userService.ts
src/components/tabs/issues/: QuestionAndAnswer.tsx  issueDetail.tsx
src/components/tabs/misc/: DataRoomCard.tsx
src/components/tabs/user_management/components/: UsersTabContent.tsx
src/components/ui/: ai-input-with-search.tsx  button.tsx
src/lib/: anystoreBackend.ts  auth.ts  demoMode.ts
