[project]
name = "anystore-agentic-backend"
version = "0.1.0"
description = "AnyStore Google ADK service for GCP agent orchestration."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.2",
    "google-adk>=2.3.0",
    "google-cloud-aiplatform>=1.158.0",
    "google-cloud-firestore>=2.28.0",
    "google-cloud-secret-manager>=2.29.0",
    "google-cloud-storage>=3.12.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
anystore-agent = "anystore_agent.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anystore_agent"]
